--- a/.github/workflows/starred.yml
+++ b/.github/workflows/starred.yml
@@ -22,7 +22,7 @@ jobs:
         
           curl -s "https://api.github.com/users/${GH_USERNAME}/starred?per_page=10" | jq -r '
             .[] | 
-            "### [📌 \(.full_name)](\(.html_url))\n> _\(.description // "No description.")_\n\n---\n"
+            "### [📌 \(.full_name)](\(.html_url))\n> _\(.description // \"No description.\")_\n\n---\n"
           ' >> README.md
       - name: Commit and Push Changes
         run: |
