--- a/.github/workflows/starred.yml
+++ b/.github/workflows/starred.yml
@@ -20,9 +20,8 @@ jobs:
           echo "# ⭐ My Favorite Repositories" > README.md
           echo "" >> README.md
         
-          curl -s "https://api.github.com/users/${GH_USERNAME}/starred?per_page=10" | jq -r '
-            .[] | 
-            "### [📌 \(.full_name)](\(.html_url))\n> _\(.description // \"No description.\")_\n\n---\n"
+          curl -s "https://api.github.com/users/${GH_USERNAME}/starred?per_page=10" | jq -r '.[] | 
+            "### [📌 \(.full_name)](\(.html_url))\n> _\(.description // \"No description.\")_\n\n---\n"' >> README.md
           ' >> README.md
       - name: Commit and Push Changes
         run: |
