--- a/.github/workflows/starred.yml
+++ b/.github/workflows/starred.yml
@@ -19,9 +19,13 @@ jobs:
         run: |
           echo "# ⭐ My Favorite Repositories" > README.md
           echo "" >> README.md
-        
-          curl -s "https://api.github.com/users/${GH_USERNAME}/starred?per_page=10" | jq -r '.[] | @sh "### [📌 \(.full_name)](\(.html_url))\n> _\(.description // \"No description.\")_\n\n---\n"' | tr -d "'" >> README.md
-      - name: Commit and Push" Changes
+          
+          curl -s "https://api.github.com/users/${GH_USERNAME}/starred?per_page=10" | jq -r '
+            .[] |
+            "### [📌 \(.full_name)](\(.html_url))\n> _\(.description // \"No description.\")_\n\n---\n"
+          ' >> README.md
+
+      - name: Commit and Push Changes
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
